# movieboom-ios

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  Makefile  Podfile  Pods.WORKSPACE  README.md  WORKSPACE  dev.mobileprovision  release.mobileprovision
BazelAppDev/: AppDelegate.swift  Info.plist  Info2.plist  SceneDelegate.swift  ViewController.swift
BazelAppDev.tulsiproj/: muis.tulsiconf-user  project.tulsiconf
BazelAppDev.tulsiproj/Configs/: default.tulsigen  with_vendor.tulsigen
BazelAppDev.xcodeproj/: project.pbxproj
BazelAppDev.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BazelAppDev.xcodeproj/xcuserdata/muis.xcuserdatad/xcschemes/: xcschememanagement.plist
MovieBOOM/: .gitignore  Api_TMDB_MediaType.swift  Api_TMDB_Rest.swift  Api_TMDB_TimeWindow.swift  AppDelegate.swift  App_AppDelegate.swift  App_DictionaryTypedValue.swift  App_Image_Functions.swift  App_JSONArrayExtension1.swift  App_JSONOperatorOverload.swift  App_NeedleGenerated.swift  App_OptionalExtension.swift  App_RestManager.swift  App_RootComponent.swift  App_TMDBConfig.plist  App_TMDBConfiguration.swift  App_TMDB_Thrift.swift  App_TTCPStream.swift  App_createFunction.swift  BUILD  BUILD.bazel  Info.plist  Info.plist-e  Key_Keys.swift  Plist_Info.plist  Scene_Dashboard.storyboard  Scene_DashboardComponent.swift  Scene_DashboardController.swift  Scene_Home.storyboard  Scene_HomeCell_HeroCell.swift  Scene_HomeCell_HomeHeroCollCell.swift  Scene_HomeCollectionViewLayout.swift  Scene_HomeComponent.swift  Scene_HomeController.swift  Scene_HomeHero_CollLayout.swift  Scene_Login.storyboard  Scene_LoginComponent.swift  Scene_LoginController.swift  Scene_Movie.storyboard  Scene_MovieComponent.swift  (+5 more)
MovieBOOM.tulsiproj/: muis.tulsiconf-user  project.tulsiconf
MovieBOOM.tulsiproj/Configs/: default.tulsigen-e  with_vendor.tulsigen
MovieBOOM/Assets.xcassets/thumbnail.imageset/: Contents.json
MovieBOOM/MovieBOOMiOS.tulsiproj/: muis.tulsiconf-user  project.tulsiconf
MovieBOOM/MovieBOOMiOS.tulsiproj/Configs/: sources-all.tulsigen
MovieBOOMiOS.tulsiproj/: project.tulsiconf
MovieBOOMiOS.tulsiproj/Configs/: sources-all.tulsigen
Rome/: BUILD  BUILD.bazel  TinyConstraints-Info.plist
Rome/FBLPromises.framework/: FBLPromises  Info.plist
Rome/FBLPromises.framework/_CodeSignature/: CodeResources
Rome/FirebaseCore.framework/: FirebaseCore  Info.plist
Rome/FirebaseCore.framework/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
Rome/FirebaseCoreDiagnostics.framework/: FirebaseCoreDiagnostics  Info.plist
Rome/FirebaseCoreDiagnostics.framework/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
Rome/FirebaseInstallations.framework/: FirebaseInstallations  Info.plist
Rome/FirebaseInstallations.framework/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
Rome/GoogleDataTransport.framework/: GoogleDataTransport  Info.plist
Rome/GoogleDataTransport.framework/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
Rome/GoogleUtilities.framework/: GoogleUtilities  Info.plist
Rome/GoogleUtilities.framework/_CodeSignature/: CodeResources
Rome/Nimble.framework/: Info.plist  Nimble
Rome/Nimble.framework/Headers/: Nimble-Swift.h
Rome/Nimble.framework/Modules/Nimble.swiftmodule/: arm64.swiftdoc  arm64.swiftmodule  x86_64-apple-ios-simulator.swiftdoc  x86_64-apple-ios-simulator.swiftmodule
Rome/Nimble.framework/_CodeSignature/: CodeResources
Rome/RxCocoa.framework/: Info.plist  RxCocoa
Rome/RxCocoa.framework/Headers/: RxCocoa-Swift.h
Rome/RxCocoa.framework/Modules/RxCocoa.swiftmodule/: arm64-apple-ios.swiftdoc  arm64-apple-ios.swiftmodule  x86_64-apple-ios-simulator.swiftmodule  x86_64.swiftdoc
Rome/RxCocoa.framework/_CodeSignature/: CodeResources
Rome/RxRelay.framework/: Info.plist  RxRelay
Rome/RxRelay.framework/Headers/: RxRelay-Swift.h
Rome/RxRelay.framework/Modules/RxRelay.swiftmodule/: arm64-apple-ios.swiftmodule  arm64.swiftdoc  x86_64-apple-ios-simulator.swiftmodule  x86_64.swiftdoc  x86_64.swiftmodule
Rome/RxRelay.framework/_CodeSignature/: CodeResources
Rome/RxSwift.framework/: Info.plist
Rome/RxSwift.framework/Headers/: RxSwift-Swift.h
Rome/RxSwift.framework/Modules/RxSwift.swiftmodule/: arm64-apple-ios.swiftdoc  arm64-apple-ios.swiftmodule  x86_64-apple-ios-simulator.swiftdoc  x86_64-apple-ios-simulator.swiftmodule  x86_64.swiftdoc
Rome/RxSwift.framework/_CodeSignature/: CodeResources
Rome/TinyConstraints.framework/: Info.plist  TinyConstraints
Rome/TinyConstraints.framework/Headers/: TinyConstraints-Swift.h
Rome/TinyConstraints.framework/Modules/: module.modulemap
Rome/TinyConstraints.framework/Modules/TinyConstraints.swiftmodule/: arm64-apple-ios.swiftmodule  arm64.swiftdoc  arm64.swiftmodule  x86_64-apple-ios-simulator.swiftdoc  x86_64-apple-ios-simulator.swiftmodule  x86_64.swiftmodule
Rome/TinyConstraints.framework/_CodeSignature/: CodeResources
Rome/nanopb.framework/: Info.plist  nanopb
Rome/nanopb.framework/_CodeSignature/: CodeResources
config/: custom_rules.bzl
thrift/: BUILD  Makefile  Podfile  README.md  dependencies.py
tools/rswift/: Makefile  project.yml
tools/rswift/Sources/: Info.plist
