load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

load("//config:custom_rules.bzl", "prebuilt_dynamic_framework")

swift_library(
    name = "MovieBOOM",
    srcs = glob(["MovieBOOM/**/*.swift"]),
    data = glob(["MovieBOOM/**/*.storyboard"]),
    deps = [
        "//Rome:TinyConstraints",
    ],
)

ios_application(
    name = "MovieBOOMApp",
    bundle_id = "com.muiz.idn.movieboom.ios",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "12.0",
    infoplists = [":MovieBOOM/Info.plist"],
    visibility = ["//visibility:public"],
    provisioning_profile = "dev.mobileprovision",
    deps = [
        ":MovieBOOM",
    ],
    frameworks = []
)
